--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,7 +1,9 @@
-FROM php:7.2.5-fpm
+FROM php:7.4-apache
 
 RUN apt-get update && apt-get install -y \
             curl \
+            libmemcached-dev \
+            memcached \
             wget \
             git \
             libfreetype6-dev \
@@ -11,14 +13,29 @@ RUN apt-get update && apt-get install -y \
             libpq-dev \
             libzip-dev \
             libicu-dev \
-      && pecl install xdebug mcrpyt-1.0.1 \
-      && docker-php-ext-enable xdebug mcrypt \
+            libonig-dev \
       && docker-php-ext-install -j$(nproc) iconv mbstring mysqli pdo_mysql zip \
-      && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+      && docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/include/ \
       && docker-php-ext-install -j$(nproc) gd
 
 RUN curl -Ss https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-ADD php.ini /usr/local/etc/php/conf.d/40-custom.ini
-WORKDIR /var/www
-CMD ["php-fpm"]
 
+# apache
+RUN rm -rfv /etc/apache2/sites-enabled/*.conf
+COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
+RUN ln -s /etc/apache2/sites-available/000-default.conf /etc/apache2/sites-enabled/000-default.conf
+CMD ["apachectl","-D","FOREGROUND"]
+RUN a2enmod rewrite
+RUN usermod -u 1000 www-data
+RUN chown www-data:www-data /var/www/html/
+
+# memcached
+RUN pecl install memcached-3.1.5
+RUN docker-php-ext-enable memcached
+
+# install xdebug
+RUN pecl install xdebug
+RUN docker-php-ext-enable xdebug
+COPY php.ini /usr/local/etc/php/php.ini
+
+WORKDIR /var/www/html
