--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,5 +1,9 @@
+zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20160303/xdebug.so
+xdebug.default_enable=1
 xdebug.remote_enable=1
-xdebug.remote_connect_back=1
-xdebug.var_display_max_depth=5
-xdebug.extended_info=1
 xdebug.remote_port=9000
+xdebug.remote_handler=dbgp
+xdebug.remote_connect_back=0
+xdebug.remote_host=YOURDOCKERIPADRESS
+xdebug.idekey=YOURIDEKEY
+xdebug.remote_autostart=1
