--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,20 +1,20 @@
 FROM php:7.4-apache
 
 RUN apt-get update && apt-get install -y \
-            curl \
-            libmemcached-dev \
-            memcached \
-            wget \
-            git \
-            libfreetype6-dev \
-            libjpeg62-turbo-dev \
-            libmcrypt-dev \
-            libpng-dev \
-            libpq-dev \
-            libzip-dev \
-            libicu-dev \
-            libonig-dev \
-      && docker-php-ext-install -j$(nproc) iconv mbstring mysqli pdo_mysql zip \
+      curl \
+      libmemcached-dev \
+      memcached \
+      wget \
+      git \
+      libfreetype6-dev \
+      libjpeg62-turbo-dev \
+      libmcrypt-dev \
+      libpng-dev \
+      libpq-dev \
+      libzip-dev \
+      libicu-dev \
+      libonig-dev \
+      && docker-php-ext-install -j$(nproc) iconv mbstring mysqli pdo_mysql zip tidy \
       && docker-php-ext-configure gd --with-jpeg=/usr/include/ --with-freetype=/usr/include/ \
       && docker-php-ext-install -j$(nproc) gd
 
